manifests/blue-test.service.yml
kind: Service
apiVersion: v1
metadata:
  name: todo-blue-test
  labels:
    app: todo
    role: blue-test
    env: test
spec:
  type: LoadBalancer
  selector:
    app: todo
    role: blue
  ports:
    - port: 9000
      targetPort: 80
