manifests/green-test.service.yml
kind: Service
apiVersion: v1
metadata:
  name: todo-green-test
  labels:
    app: todo
    role: green-test
    env: test
spec:
  type: LoadBalancer
  selector:
    app: todo
    role: green
  ports:
    - port: 9001
      targetPort: 80
